note routes and cleanup
