# api/openapi.yaml
@@ -155,6 +155,60 @@ paths:
           description: ""
       tags:
         - client
+  /note:
+    post:
+      operationId: addNote
+      description: Route to add a note for a client
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/NewNoteDetails"
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/Note"
+      tags:
+        - note
+  /note/{id}:
+    get:
+      operationId: getNotesForClient
+      description: Route to get notes for a client
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Note"
+      tags:
+        - note
+    delete:
+      operationId: deleteNote
+      description: Route to delete a note for a user
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags:
+        - note
 components:
   securitySchemes:
     bearer:
@@ -162,44 +216,28 @@ components:
       bearerFormat: JWT
       type: http
   schemas:
-    Client:
-      type: object
-      properties:
-        id: 
-          type: string
-        userId:
-          type: string
-        firstName: 
-          type: string
-        lastName: 
-          type: string
-        email: 
-          type: string
-        phoneNumber: 
-          type: string
-        address: 
-          type: string
-        age: 
-          type: number
-        createdAt:
-          type: string
-        updatedAt:
-          type: string
     NewClientDetails:
       type: object
       properties:
-        firstName: 
+        firstName:
           type: string
-        lastName: 
+        lastName:
           type: string
-        email: 
+        email:
           type: string
-        phoneNumber: 
+        phoneNumber:
           type: string
-        address: 
+        address:
           type: string
-        age: 
+        age:
           type: number
+    NewNoteDetails:
+      type: object
+      properties:
+        clientId:
+          type: string
+        content:
+          type: string
     UserResponse:
       type: object
       properties:
